# secure-files

./: .dockerignore  .gitignore  Dockerfile  FINAL_STATUS_REPORT.md  PROJECT_STATUS.md  QUICK_START.md  README.md  TODO.md  alembic.ini  check_files.py  comprehensive_system_test.py  docker-compose.yml  login_proof.json  manual_file_test.py  performance.py  performance_validation.py  production_test.py  pyproject.toml  requirements.txt  results.py  test_download.txt  test_file.txt  test_login.json  test_real_zkp.py  test_register.json  test_sharing_functionality.py  test_ui_ready.py
UI/zkp-frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
UI/zkp-frontend/public/: index.html
UI/zkp-frontend/src/: App.tsx
UI/zkp-frontend/src/components/: Dashboard.tsx  EditProfile.tsx  FileManager.tsx  FileSharing.tsx  KeyManager.tsx  LoadingScreen.tsx  Login.tsx  Navbar.tsx  PublicFileAccess.tsx  Register.tsx  Sidebar.tsx
UI/zkp-frontend/src/services/: zkpService.ts
alembic/: env.py
alembic/versions/: 8f38843332af_add_file_and_file_permission_models.py  fd685cef1454_initial_migration_create_users_table.py
app/: main.py
app/api/auth/: __init__.py  router.py  schemas.py
app/api/files/: __init__.py  router.py  schemas.py
app/api/users/: __init__.py
app/core/: config.py  dependencies.py  exceptions.py
app/models/: database.py  file.py  user.py
app/services/: auth.py  file.py  storage.py  zkp.py
docs/: API_CONTRACT.md  API_DOCUMENTATION.md  PROJECT_ACHIEVEMENTS.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_GUIDE.md  UI_DOCUMENTATION.md  USER_GUIDE.md  ZKP_IMPLEMENTATION.md
docs/api/: API_DOCUMENTATION.md
docs/architecture/: APPLICATION_FLOW.md  AUTHENTICATION_FLOW.md  ZKP_COMPARISON_ANALYSIS.md  ZKP_IMPLEMENTATION.md
docs/deployment/: DEPLOYMENT.md
docs/development/: PROJECT_SUMMARY.md
docs/guides/: QUICK_START.md  USER_GUIDE.md
docs/results/: result.md
docs/troubleshooting/: BUG_FIXES_COMPLETE.md  SHARING_FIXES_SUMMARY.md
performance/: BENCHMARK_RESULTS_SUMMARY.md  README.md  auth_comparison_benchmark.py  auth_comparison_results.json  demo.py  file_operations_benchmark.py  requirements.txt  run_all_benchmarks.py  scalability_results.json  system_scalability_benchmark.py  zkp_benchmark_results.json  zkp_performance_benchmark.py
